--- a/api/.dockerignore
+++ b/api/.dockerignore
@@ -1,4 +1,3 @@
-.env
 *.env
 .vscode/
 .idea/
@@ -13,3 +12,19 @@ main
 *.test
 
 
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+coverage.*
+*.coverprofile
+profile.cov
+vendor/
+go.work
+go.work.sum
+.env
+.idea/
+.vscode/
