--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,2 +1,20 @@
 tmp
 logs
+
+
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+coverage.*
+*.coverprofile
+profile.cov
+vendor/
+go.work
+go.work.sum
+.env
+.idea/
+.vscode/
