--- a/api/.env.template
+++ b/api/.env.template
@@ -1,22 +1,22 @@
 ENV=development # production or dev, set production in cloud
 
 # default user created by cockroachdb --insecure
-DB_HOST=localhost
+DB_HOST=localhost # set to cockroachdb if using docker
 DB_NAME=defaultdb
 DB_USER=root
 DB_PASSWORD=
 DB_PORT=26257
-DB_SSL=false
+DB_SSL=false # set to true if using ssl
 DB_SCHEMA=stocksvision
 
 # REDIS
-REDIS_HOST=localhost
+REDIS_HOST=localhost # set to redis if using docker
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
 # API
 API_PORT=8080
-CLIENTS_HOST="http://localhost:5173" # separated by comma, cors
+CLIENT_HOST="http://localhost:5173" 
 
 # LOG
 LOG_LEVEL=INFO
@@ -33,3 +33,6 @@ FINANCIAL_TOKEN=
 #FINHUB
 FINHUB_BASE_URL=https://finnhub.io/api/v1
 FINHUB_TOKEN=
+
+# GeminiAi
+GEMINI_API_KEY=
