--- a/client/.dockerignore
+++ b/client/.dockerignore
@@ -1,5 +1,6 @@
 .env
 *.env
+node_modules*
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -18,3 +19,8 @@ package-lock.json
 Thumbs.db
 .git
 .gitignore
+*.MD
+
+stats.html
+tsconfig.tsbuildinfo
+__mock*__.ts
