--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,16 +1,18 @@
 # stage builder
 FROM node:22-alpine AS builder
 
+RUN npm install -g pnpm
+
 ARG VITE_API_URL
 ENV VITE_API_URL=${VITE_API_URL}
 
 WORKDIR /app
 
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
+COPY package.json pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile
 
 COPY . .
-RUN yarn build
+RUN pnpm run build
 
 
 # stage runner
@@ -20,9 +22,9 @@ RUN apk add --no-cache gettext
 
 COPY --from=builder /app/dist /usr/share/nginx/html
 COPY env.js.template /usr/share/nginx/html/env.js.template
-
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY env.sh /docker-entrypoint.d/env.sh
 RUN chmod +x /docker-entrypoint.d/env.sh
-
+  
 EXPOSE 80
 ENTRYPOINT ["/docker-entrypoint.d/env.sh"]
