--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@fontsource/roboto": "^5.2.7",
     "@mdi/font": "^7.4.47",
     "dompurify": "^3.2.6",
+    "html2canvas": "^1.4.1",
     "lightweight-charts": "^5.0.9",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
