--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,7 +9,10 @@
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["vite/client"],
+    "types": [
+      "vite/client",
+      "vitest/globals"
+    ],
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
@@ -20,5 +23,6 @@
     },
     "noEmit": true,
   },
-  "include": ["src"]
+  "include": ["src", "test"],
+  "exclude": ["node_modules"]
 }
