--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "html2canvas": "^1.4.1",
     "lightweight-charts": "^5.0.9",
     "pinia": "^3.0.3",
+    "shepherd.js": "^14.5.1",
     "vue": "^3.5.18",
     "vue-router": "^4.6.3"
   },
