--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,7 +9,8 @@ FROM alpine:latest
 RUN apk --no-cache add ca-certificates
 WORKDIR /root/
 COPY --from=builder /app/main .
+COPY --from=builder /app/data/recommendations.json .
 EXPOSE 8080
 
 ENTRYPOINT [ "./main" ]
-CMD ["fill-db"]
+CMD ["fill-db", "--json", "recommendations.json"]
