--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,15 +11,24 @@ services:
     command: start-single-node --insecure
     networks:
       - stockvision-network
-
   api:
+    environment:
+      DB_HOST: cockroachdb
+      DB_NAME: defaultdb
+      DB_USER: root
+      DB_PASSWORD: ""
+      DB_PORT: 26257
+      DB_SSL: "false"
+      DB_SCHEMA: stocksvision
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_PASSWORD: ""
+      API_PORT: "${API_PORT:-8080}"
+      LOG_LEVEL: INFO
+      LOG_DB: "false"
     build:
       context: ./api
-      dockerfile: Dockerfile
-      args:
-        API_PORT: ${API_PORT:-8080}   
-        LOG_LEVEL: INFO
-        LOG_DB: false             
+      dockerfile: Dockerfile          
     container_name: stockvision-api
     restart: on-failure:3
     ports:
